--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "self-project",
   "private": true,
   "version": "0.0.0",
-  "main": "api/server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
