--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "self-project",
   "private": true,
   "version": "0.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "start": "node api/server.js",
-    "server": "json-server -w db.json -p 3005",
+    "server": "json-server -w api/db.json -p 3005",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
